--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -73,7 +73,7 @@
 		<div th:replace="includeForm :: activeField"></div>
 		<div class="form-check">
 			<input class="form-check-input" type="checkbox" th:field="*{production}" />
-			<label class="form-check-label" for="production" th:text="#{production}"></label>
+			<label class="form-check-label" for="production" th:text="#{Production}"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<input class="form-control" placeholder="15.000" type="number"
