recolteMielForm traitement bindingResult

--- a/src/main/resources/templates/recolte/recolteMielForm.html
+++ b/src/main/resources/templates/recolte/recolteMielForm.html
@@ -44,6 +44,7 @@
 .modif {
 	width: 6em;
 }
+/* Suppression de fleches de changement des poids de miel */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
