essaimStatistiques.html correction bug post->get dans form Filter

--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -48,7 +48,7 @@ $(document).ready(function() {
     </div>
     <div class="container-fluid">
 	    <form action="#" th:action="@{/essaim/statistiques}"
-			method="post" id="rucherForm">
+			method="get" id="rucherForm">
 			<div class="mb-3 row">
 				<label for="rucherId" th:text="#{rucher}"
 				  class="col-sm-2 col-form-label"></label>
