--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -6,7 +6,7 @@
 <link th:replace="include :: cssjquerydaterangepicker"/>
 <script th:src="@{/js/ruches/evenementListe.js}"></script>
 <script th:inline="javascript">
-	const listeEvenements = /*[[#{listeEvenements}]]*/ null;
+	const Evenements = /*[[#{evenements}]]*/ null;
 	const buttontextprint = /*[[#{buttontextprint}]]*/ null;
 	const buttontextcol = /*[[#{buttontextcol}]]*/ null;
 	$(document).ready(function() {
