--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -4,14 +4,14 @@
 <script th:inline="javascript">
 const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
-const listePersonnes = /*[[#{listePersonnes}]]*/ null;
+const Personnes = /*[[#{Personnes}]]*/ null;
 $(document).ready(function() {
     new DataTable('#personnes', {
         dom: 'Blftip',
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: listePersonnes + " " + (new Date()).toLocaleDateString()},
+	    		title: Personnes + " " + (new Date()).toLocaleDateString()},
 	        {extend: 'print', text: buttTxtPrint},
 	        {extend: 'colvis', text: buttTxtCol}
         ]
