--- a/src/main/resources/templates/essaim/essaimHisto.html
+++ b/src/main/resources/templates/essaim/essaimHisto.html
@@ -19,8 +19,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<table class="table table-bordered">
+	<div class="container-fluid table-responsive">
+		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
