--- a/src/main/resources/templates/evenement/evenementTraitementListe.html
+++ b/src/main/resources/templates/evenement/evenementTraitementListe.html
@@ -7,7 +7,7 @@
 <link th:replace="include :: cssjquerydaterangepicker" />
 <script th:src="@{/js/ruches/evenementListe.js}"></script>
 <script th:inline="javascript">
-	const listeEvenements = /*[[#{listeEvenements}]]*/null;
+	const Evenements = /*[[#{evenements}]]*/ null;
 	const buttontextprint = /*[[#{buttontextprint}]]*/null;
 	const buttontextcol = /*[[#{buttontextcol}]]*/null;
 	const url = /*[[@{'/evenement/essaim/listeTraitement/'}]]*/null;
