bootstrap navbar 5.3 bg-body-tertiary

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -121,9 +121,9 @@
 	th:src="@{/js/moment-with-locales.min-2.29.4.js}"></script>
 
 <body>
-	<!--/*    https://getbootstrap.com/docs/5.2/components/navbar/    */-->
-	<nav th:fragment="navbar"
-		class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	<!--/*    https://getbootstrap.com/docs/5.3/components/navbar/    */-->
+	<nav th:fragment="navbar"	
+		class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#" th:href="@{/}"> <img
 				th:src="@{/images/ruche.png}" alt="Logo" width="18">
