liste rucheTypes affichage nb ruche avec et sans essaim

--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -43,7 +43,8 @@ $(document).ready(function() {
 				<tr>
 					<th th:text="#{nom}"></th>
 					<th th:text="#{nbCadresMax}"></th>
-					<th th:text="#{nbRuches}"></th>
+					<th th:text="#{nbRuchesEssaim}"></th>
+					<th th:text="#{nbRuchesSansEssaim}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
@@ -52,7 +53,8 @@ $(document).ready(function() {
 					<td><a th:href="@{'/rucheType/'+${rucheType.id}}"
 						th:text="*{rucheType.nom}"></a></td>
 					<td class="num" th:text="*{rucheType.nbCadresMax}"></td>
-					<td class="num" th:text="${NbRuches[rucheTypeStat.index]}"></td>
+					<td class="num" th:text="${nbRuchesEssaim[rucheTypeStat.index]}"></td>
+					<td class="num" th:text="${nbRuchesSansEssaim[rucheTypeStat.index]}"></td>
 					<td th:text="${rucheType.commentaire}"></td>
 				</tr>
 			</tbody>
