--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -39,11 +39,11 @@
 			<div class="col">
 				<a id="cree" th:href="@{/rucher/cree}" class="bi-plus-lg"
 					th:title="#{ajouterRucher}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{/rucher/Gg/}" class="bi-google" th:title="#{carteGg}"
-					aria-hidden="true"></a> <a th:href="@{'/rucher/Ign/'}"
+					th:href="@{/rucher/Gg}" class="bi-google" th:title="#{carteGg}"
+					aria-hidden="true"></a> <a th:href="@{'/rucher/Ign'}"
 					th:title="#{carteIgn}" aria-hidden="true"><img
 					th:src="@{'/images/france.svg'}" style="margin-bottom: 2px;" /></a> <a
-					th:href="@{/rucher/Osm/}" class="bi-globe"
+					th:href="@{/rucher/Osm}" class="bi-globe"
 					th:title="#{carteOsm}" aria-hidden="true"></a> &nbsp; <a
 					th:href="@{/rucher/statistiques}" class="bi-table"
 					th:title="#{statistiquesruchers}" aria-hidden="true"></a> &nbsp; <a
