--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
 	<br />
 	<form th:action="@{/login}" method="post">
 		<label for="username" th:text="#{nomUtilisateur}"></label><br/>
-		<input type="text" id="username" name="username" />
+		<input type="text" id="username" name="username" autofocus />
 		<br/><br/>
 		<label for="password" th:text="#{motDePasse}"></label><br/>
 		<input type="password" id="password" name="password" />
