--- a/src/main/resources/templates/passwordResetForm.html
+++ b/src/main/resources/templates/passwordResetForm.html
@@ -13,7 +13,7 @@
 		<div class="mb-3">
 			<label class="form-label" for="email" th:text="#{email}"></label> 
 			<input
-				type="text" class="form-control" id="email" name="email" />
+				type="text" class="form-control" id="email" name="email" autofocus />
 		</div>
 		<br/>
 		<div class="mb-3">
