--- a/src/main/resources/templates/resetPasswordForm.html
+++ b/src/main/resources/templates/resetPasswordForm.html
@@ -14,7 +14,7 @@
 		<div class="mb-3">
 			<label class="form-label" for="password" th:text="#{motDePasse}"></label> 
 			<input
-				 type="password" class="form-control" id="password" name="password" value="" />
+				 type="password" class="form-control" id="password" name="password" value="" autofocus />
 		</div>
 		<br/>
 		<div class="mb-3">
