liste des essaims table responsive bootstrap pour test

--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -81,8 +81,14 @@ $(document).ready(function() {
         	</div>
         </div>
     </div>
-	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive" id="essaims">			
+    
+    <!--/*  
+    <div class="container-fluid ">
+		<table class="table table-bordered table-striped dt-responsive" id="essaims">
+    */-->
+    
+	<div class="container-fluid table-responsive">
+		<table class="table table-bordered table-striped table-sm" id="essaims">			
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
