--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -15,6 +15,7 @@
 						style : 'multi+shift'
 					},
 					dom : 'Blftip',
+					scrollX: true,
 					buttons : [ 'csv', {
 						extend : 'pdf',
 						exportOptions : {
@@ -79,7 +80,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive"
+		<table class="table table-bordered table-striped table-sm"
 			id="ruches">
 			<thead>
 				<tr>
