--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -13,6 +13,7 @@ $(document).ready(function() {
 	const table = new DataTable('#essaims', {
     	select: {style: 'multi+shift'},
         dom: 'Blftip',
+        scrollX: true,
         buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
@@ -87,7 +88,7 @@ $(document).ready(function() {
 		<table class="table table-bordered table-striped dt-responsive" id="essaims">
     */-->
     
-	<div class="container-fluid table-responsive">
+	<div class="container-fluid">
 		<table class="table table-bordered table-striped table-sm" id="essaims">			
 			<thead>
 				<tr>
