--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -8,6 +8,7 @@
 	$(document).ready(function() {
 	    new DataTable('#ruchesplus', {
 	        dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
+	        scrollX: true,
 		    buttons: [
 		    	'csv',
 		    	{extend: 'pdf', exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}, 
@@ -33,7 +34,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-sm table-bordered table-striped dt-responsive" id="ruchesplus">
+		<table class="table table-sm table-bordered table-striped table-sm" id="ruchesplus">
 			<thead>
 				<tr>
 					<th style="background-color:LightGoldenRodYellow" th:text="#{nom}"></th>
