--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -10,6 +10,7 @@ const nomrucher = /*[[${rucher.nom}]]*/ null;
 $(document).ready(function() {
     new DataTable('#ruches', {
         dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
+        scrollX: true,
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible', pageSize: 'A3', oriention: 'landscape'}, 
@@ -39,7 +40,7 @@ $(document).ready(function() {
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-sm table-bordered table-striped" id="ruches">
+		<table class="table table-bordered table-striped table-sm" id="ruches">
 			<thead>
 				<tr>
 					<th style="background-color:LightGoldenRodYellow" th:text="#{Ordre}"></th>
