--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -9,6 +9,7 @@
 	$(document).ready(function() {
 		new DataTable('#ruchers', {
 			dom : 'Blftip',
+			scrollX: true,
 			buttons : [ 'csv', {
 				extend : 'pdf',
 				exportOptions : {
@@ -53,7 +54,7 @@
 		</div>
 	</div>
 	<div class="container-fluid" id="ruchersDiv">
-		<table class="table table-bordered table-striped dt-responsive"
+		<table class="table table-bordered table-striped table-sm"
 			id="ruchers">
 			<thead>
 				<tr>
