--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -23,6 +23,7 @@
 				});
 				new DataTable('#ruches', {
 					dom : '<"buttonsData" Blf>t<"buttonsData" ip>',
+					scrollX: true,
 					buttons : [
 							'csv',
 							{
@@ -86,7 +87,7 @@
 		<h6 th:unless="${#arrays.length(ruches)}" th:text="#{PasDeRuche}"></h6>
 		<th:block th:if="${#arrays.length(ruches)}">
 			<h6 th:text="#{listeXRuches(${#arrays.length(ruches)})}"></h6>
-			<table class="table table-sm table-bordered table-striped dt-responsive"
+			<table class="table table-sm table-bordered table-striped table-sm"
 				id="ruches">
 				<thead>
 					<tr>
