--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -9,6 +9,7 @@ const rucheTypes = /*[[#{rucheTypes}]]*/ null;
 $(document).ready(function() {
     new DataTable('#ruchetypes', {
         dom: 'Blftip',
+        scrollX: true,
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
@@ -38,7 +39,7 @@ $(document).ready(function() {
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive" id="ruchetypes">
+		<table class="table table-bordered table-striped table-sm" id="ruchetypes">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
