--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -60,7 +60,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive"
+		<table class="table table-bordered table-striped table-sm"
 			id="evenementsnotif">
 			<thead>
 				<tr>
