--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -116,7 +116,7 @@
 			#{ruchesAvecEssaimDepot}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
@@ -141,7 +141,7 @@
 			#{ruchesAvecHaussesDepot}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
@@ -163,7 +163,7 @@
 				#{ruchesSansEssaimPasDepot}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
@@ -189,7 +189,7 @@
 			#{essaimsHorsRuche}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
@@ -211,7 +211,7 @@
 			#{ruchersLoinDeLeursRuches(${#numbers.formatDecimal(distRuchersTropLoins,1,0)})}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
@@ -236,7 +236,7 @@
 			#{ruchesAPlusde(${#numbers.formatDecimal(distRuchesTropLoins,1,0)})}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
@@ -261,7 +261,7 @@
 				#{ruchesSansEven(${retardRucheEvenement})}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
@@ -287,7 +287,7 @@
 			#{essaimDateNaissSupAcquis}"></h1>
 		<div>
 			<table
-				class="table table-bordered table-striped datatable-tri dt-responsive">
+				class="table table-bordered table-striped datatable-tri table-sm">
 				<thead>
 					<tr>
 						<th scope="col" th:text="#{nom}"></th>
