--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -9,6 +9,7 @@
 	$(document).ready(function() {
 		new DataTable('#recoltes', {
 			dom : 'Blftip',
+			scrollX: true,
 			buttons : [ 'csv', {
 				extend : 'pdf',
 				exportOptions : {
@@ -51,7 +52,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive"
+		<table class="table table-bordered table-striped table-sm"
 			id="recoltes">
 			<thead>
 				<tr>
