--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -51,7 +51,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive" id="evenements">
+		<table class="table table-bordered table-striped table-sm" id="evenements">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
