--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -70,7 +70,7 @@ $(document).ready(function() {
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive" id="evenementssucre">
+		<table class="table table-bordered table-striped table-sm" id="evenementssucre">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
