--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -8,6 +8,7 @@ const Personnes = /*[[#{Personnes}]]*/ null;
 $(document).ready(function() {
     new DataTable('#personnes', {
         dom: 'Blftip',
+        scrollX: true,
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
@@ -36,7 +37,7 @@ $(document).ready(function() {
         </div>
     </div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive" id="personnes">			
+		<table class="table table-bordered table-striped table-sm" id="personnes">			
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
