--- a/src/main/resources/templates/rucher/rucherStatistiques.html
+++ b/src/main/resources/templates/rucher/rucherStatistiques.html
@@ -14,6 +14,7 @@ $(document).ready(function() {
     });
     new DataTable('#statistiques', {
     	dom: 'Blftip',
+    	scrollX: true,
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
@@ -48,7 +49,7 @@ $(document).ready(function() {
 		
     </div>
 	<div class="container-fluid">
-	<table class="table dt-responsive table-bordered table-striped" id="statistiques">
+	<table class="table table-bordered table-striped table-sm" id="statistiques">
 			<thead>
 			    <tr>
 					<th th:text="#{rucher}"></th>
